syntax = "proto3";

package proto;

option go_package = "/product";

service ProductService {
    rpc AddProduct(AddProductRequest) returns (AddProductResponse);
    rpc ListProducts(ListProductsRequest) returns (stream ListProductsResponse);
}

message AddProductRequest {
    string name = 1;
    float price = 2;
}

message AddProductResponse {
    string id = 1;
}

message ListProductsRequest {}

message ListProductsResponse {
    repeated Product products = 1;
}

message Product {
    string id = 1;
    string name = 2;
    float price = 3;
}
